# ZenKit4Py

./: .gitignore  license.md  pyproject.toml  readme.md
examples/: daedalus-vm.py
src/zenkit/: __init__.py  _core.py  _native.py  animation.py  csl.py  cutscene.py  cutscene_library.py  daedalus_script.py  daedalus_vm.py  fnt.py  font.py  hierarchy.py  log.py  logger.py  man.py  mat.py  material.py  mdh.py  mdl.py  mdm.py  mesh.py  mmb.py  model.py  model_animation.py  model_hierarchy.py  model_mesh.py  model_script.py  morph.py  morph_mesh.py  mrm.py  msh.py  multi_resolution_mesh.py  soft_skin_mesh.py  softskin.py  ssm.py  stream.py  tex.py  texture.py  vfs.py
src/zenkit/core/: __init__.py  color.py  mat3x3.py  mat4x4.py  matrix.py  quat.py  vec2f.py  vec3f.py  vec4f.py  vector.py
src/zenkit/daedalus/: __init__.py  base.py  camera.py  effect_base.py  fightai.py  focus.py  guildvalues.py  info.py  item.py  item_react.py  menu.py  menu_item.py  mission.py  music_jingle.py  music_system.py  music_theme.py  npc.py  particle_effect.py  particle_effect_emit_key.py  sound_effect.py  sound_system.py  spell_instance.py  svm.py
src/zenkit/native/: osx-x64.dylib
src/zenkit/vob/: __init__.py  base.py  cutscene_camera.py  light.py  misc.py  movable_object.py  sound.py  trigger.py  virtual_object.py  zone.py
src/zenkit/world/: bsp_tree.py  bsptree.py  way_net.py  waynet.py  world.py
